[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "nimble-tk"
version = "1.0.2"
authors = [
  { name="Sarfaraz Memon", email="memon.sarfaraz@gmail.com" },
]
description = "A collection of simple but powerful utilities for Data Analytics and Data Science workflows."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.1",
  "requests>=2.25.21",
  "psycopg2-binary>=2.8.5",
  "pymongo>=3.10.1",
  "mysql-connector>=2.2.9",
  "pyyaml>=5.4.1",
  "s3fs==0.4.2",
  "gspread>=5.4.0",
  "oauth2client>=4.1.3",
  "openpyxl>=3.0.0",
  "xlsxwriter>=1.3.7",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sarfarazm/nimble-py"
"Bug Tracker" = "https://github.com/sarfarazm/nimble-py/issues"
